<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/object_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="16dp"
        android:visibility="invisible"
        />
    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <LinearLayout
            android:id="@+id/mssv_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student ID: "
                android:textSize="16dp"
                android:textColor="@color/text_pink"
                />
            <TextView
                android:id="@+id/mssv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name: "
                android:textSize="16dp"
                android:textColor="@color/text_pink"
                />
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="name"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_layout"

            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textColor="@color/text_pink"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Email"
                android:textSize="16dp"

                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:text="ClassName" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"

        android:layout_alignParentBottom="true"
        >
        <ImageButton
            android:id="@+id/edit_student"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_outline_create_24"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_btn_bg"/>
        <ImageButton
            android:id="@+id/delete_student"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_baseline_delete_outline_24"
            android:background="@drawable/delete_btn_bg"/>

    </LinearLayout>

</RelativeLayout>